[gd_scene load_steps=8 format=3 uid="uid://j148fhwv2l80"]

[ext_resource type="Script" path="res://Scenes/Towers/tower.gd" id="1_0s22x"]
[ext_resource type="Texture2D" uid="uid://dag05kn6reqb4" path="res://Assets/Assets_towers/Кристал_база_1.png" id="2_xxfbv"]
[ext_resource type="Script" path="res://Scenes/Towers/polygon_2d.gd" id="3_tub6i"]
[ext_resource type="Texture2D" uid="uid://ceutvamf1tom0" path="res://Assets/Assets_towers/иконка_улучшение.png" id="4_f1qtk"]
[ext_resource type="Texture2D" uid="uid://cptgwxenvpj4r" path="res://Assets/Assets_towers/отмена_большая.png" id="4_ombqm"]
[ext_resource type="Texture2D" uid="uid://dvifsebhny4ei" path="res://Assets/Assets_towers/иконка продажа.png" id="6_yj87q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_863ce"]
radius = 217.0

[node name="Tower_Base" type="Node2D"]
script = ExtResource("1_0s22x")

[node name="attackTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_xxfbv")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
visibility_layer = 512
z_index = 100
script = ExtResource("3_tub6i")

[node name="Attack_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_range"]
shape = SubResource("CircleShape2D_863ce")
debug_color = Color(0.92549, 0, 0.00784314, 0.14902)

[node name="ActivateButton" type="Button" parent="."]
visibility_layer = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_default_cursor_shape = 2

[node name="BackButton" type="Button" parent="."]
visible = false
z_index = 20
offset_left = -33.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 151.0
icon = ExtResource("4_ombqm")
flat = true

[node name="UpgradeButton" type="Button" parent="."]
visible = false
z_index = 20
offset_left = -36.0
offset_top = -110.0
offset_right = 36.0
offset_bottom = -38.0
mouse_default_cursor_shape = 2
icon = ExtResource("4_f1qtk")
flat = true

[node name="UpgradeButton2" type="Button" parent="."]
visible = false
z_index = 20
offset_left = -36.0
offset_top = -110.0
offset_right = 36.0
offset_bottom = -38.0
mouse_default_cursor_shape = 2
icon = ExtResource("4_f1qtk")
flat = true

[node name="SellButton" type="Button" parent="."]
visible = false
offset_left = 32.0
offset_top = -32.0
offset_right = 96.0
offset_bottom = 32.0
icon = ExtResource("6_yj87q")
flat = true

[connection signal="timeout" from="attackTimer" to="." method="shoot"]
[connection signal="area_entered" from="Attack_range" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="Attack_range" to="." method="_on_attack_range_area_exited"]
[connection signal="body_entered" from="Attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack_range" to="." method="_on_attack_range_body_exited"]
[connection signal="mouse_entered" from="ActivateButton" to="." method="_on_activate_button_mouse_entered"]
[connection signal="mouse_exited" from="ActivateButton" to="." method="_on_activate_button_mouse_exited"]
[connection signal="pressed" from="ActivateButton" to="." method="_on_activate_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="UpgradeButton2" to="." method="_on_upgrade_button_2_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
